generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  ADMIN
  STAFF
  GUEST
}

enum StayStatus {
  ACTIVE
  CANCELLED
}

enum StaySource {
  MANUAL
  EXCEL
}

enum StayRevisionAction {
  CREATED
  CORRECTED
  CANCELLED
  RESTORED
}

enum ImportStatus {
  PREVIEW
  CONFIRMED
  CANCELLED
  FAILED
}

enum ImportRowAction {
  CREATE
  UPDATE
  SKIP
}

enum ImportRowStatus {
  VALID
  NEEDS_REVIEW
  INVALID
}

enum ChecklistType {
  CHECK_IN
  CHECK_OUT
  MAINTENANCE
}

enum SubmissionStatus {
  DRAFT
  SUBMITTED
  CANCELLED
}

enum SubmissionRevisionAction {
  SUBMITTED
  CORRECTED
  CANCELLED
  RESTORED
}

enum ActorSource {
  ADMIN_SESSION
  GUEST_QR
  STAFF_QR
  PRIVATE_LINK
  SYSTEM
}

enum AttachmentKind {
  PHOTO
  IMPORT_SOURCE
}

enum AttachmentStatus {
  PENDING
  READY
  FAILED
  DELETED
}

enum PhotoPurpose {
  DEFECT
  MAINTENANCE_BEFORE
  MAINTENANCE_AFTER
  REPAIR
}

enum IssueStatus {
  NEW
  IN_PROGRESS
  RESOLVED
}

enum IssueEventType {
  REPORTED
  UPDATED
  STATUS_CHANGED
  REPAIR_REPORTED
  RESOLVED
  REOPENED
  CANCELLED
  RESTORED
}

model User {
  id           String   @id @default(uuid())
  name         String
  role         Role     @default(GUEST)
  loginId      String?  @unique
  passwordHash String?
  phone        String?
  company      String?
  department   String?
  isActive     Boolean  @default(true)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  assignedProperties  Property[]            @relation("PropertyStaff")
  guestStays          Stay[]                @relation("StayGuest")
  createdStays        Stay[]                @relation("StayCreator")
  stayRevisions       StayRevision[]
  uploadedImports     ImportBatch[]         @relation("ImportUploader")
  confirmedImports    ImportBatch[]         @relation("ImportConfirmer")
  authoredSubmissions ChecklistSubmission[]
  submissionRevisions SubmissionRevision[]
  uploadedAttachments Attachment[]
  resolvedIssues      Issue[]               @relation("IssueResolver")
  issueEvents         IssueEvent[]
  updatedPropertyGuides PropertyGuide[] @relation("PropertyGuideEditor")

  @@index([role, isActive])
}

model Property {
  id               String    @id @default(uuid())
  name             String    @unique
  region           String?
  isActive         Boolean   @default(true)
  staffUserId      String?
  vehicleRegistrationEnabled Boolean @default(false)

  guestQrTokenHash String?   @unique
  staffQrTokenHash String?   @unique
  guestQrRotatedAt DateTime? @db.Timestamptz(3)
  staffQrRotatedAt DateTime? @db.Timestamptz(3)
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt

  staff              User?                 @relation("PropertyStaff", fields: [staffUserId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  stays              Stay[]
  importRows         ImportRow[]
  checklistTemplates ChecklistTemplate[]
  submissions        ChecklistSubmission[]
  attachments        Attachment[]
  issues             Issue[]
  guide              PropertyGuide?

  @@index([staffUserId])
}

model PropertyGuide {
  propertyId      String   @id
  title           String
  content         String
  isPublished     Boolean  @default(false)
  version         Int      @default(1)
  updatedByUserId  String
  createdAt       DateTime @default(now()) @db.Timestamptz(3)
  updatedAt       DateTime @updatedAt @db.Timestamptz(3)

  property  Property @relation(fields: [propertyId], references: [id], onDelete: Restrict)
  updatedBy User     @relation("PropertyGuideEditor", fields: [updatedByUserId], references: [id], onDelete: Restrict)

  @@index([updatedByUserId])
}


model Stay {
  id                 String     @id @default(uuid())
  propertyId         String
  guestUserId        String?
  guestName          String
  company            String?
  department         String?
  phone              String?
  checkInAt          DateTime   @db.Timestamptz(3)
  checkOutAt         DateTime   @db.Timestamptz(3)
  status             StayStatus @default(ACTIVE)
  source             StaySource @default(MANUAL)
  notes              String?
  createdByUserId    String

  guestLinkTokenHash    String?   @unique
  guestLinkExpiresAt    DateTime? @db.Timestamptz(3)
  guestLinkVersion      Int       @default(0)
  guestLinkStayRevision Int?
  guestLinkUpdatedAt    DateTime? @db.Timestamptz(3)

  currentRevision    Int        @default(0)
  cancelledAt        DateTime?  @db.Timestamptz(3)
  cancellationReason String?
  createdAt          DateTime   @default(now()) @db.Timestamptz(3)
  updatedAt          DateTime   @updatedAt @db.Timestamptz(3)

  property    Property              @relation(fields: [propertyId], references: [id], onDelete: Restrict)
  guest       User?                 @relation("StayGuest", fields: [guestUserId], references: [id], onDelete: Restrict)
  createdBy   User                  @relation("StayCreator", fields: [createdByUserId], references: [id], onDelete: Restrict)
  revisions   StayRevision[]
  importRows  ImportRow[]
  submissions ChecklistSubmission[]
  vehicle     StayVehicle?

  @@unique([id, propertyId])
  @@index([propertyId, status, checkInAt])
  @@index([propertyId, status, checkOutAt])
  @@index([guestUserId])
  @@index([createdByUserId])
}

model StayVehicle {
  stayId       String   @id
  plateNumber  String?
  version      Int      @default(1)
  stayRevision Int
  createdAt    DateTime @default(now()) @db.Timestamptz(3)
  updatedAt    DateTime @updatedAt @db.Timestamptz(3)

  stay Stay @relation(fields: [stayId], references: [id], onDelete: Restrict)
}


model StayRevision {
  id            String             @id @default(uuid())
  stayId        String
  version       Int
  action        StayRevisionAction
  snapshot      Json
  actorUserId   String
  actorSnapshot Json
  reason        String?
  importRowId   String?            @unique
  createdAt     DateTime           @default(now()) @db.Timestamptz(3)

  stay      Stay       @relation(fields: [stayId], references: [id], onDelete: Restrict)
  actor     User       @relation(fields: [actorUserId], references: [id], onDelete: Restrict)
  importRow ImportRow? @relation(fields: [importRowId], references: [id], onDelete: Restrict)

  @@unique([stayId, version])
  @@index([actorUserId])
}


model ImportBatch {
  id                 String       @id @default(uuid())
  sourceAttachmentId String       @unique
  status             ImportStatus @default(PREVIEW)
  parserVersion      String       @default("retreat-roster-v1")
  timezone           String       @default("Asia/Seoul")
  version            Int          @default(1)
  uploadedByUserId   String
  confirmedByUserId  String?
  confirmedAt        DateTime?    @db.Timestamptz(3)
  cancelledAt        DateTime?    @db.Timestamptz(3)
  failureMessage     String?
  createdAt          DateTime     @default(now()) @db.Timestamptz(3)
  updatedAt          DateTime     @updatedAt @db.Timestamptz(3)

  sourceAttachment Attachment  @relation(fields: [sourceAttachmentId], references: [id], onDelete: Restrict)
  uploadedBy       User        @relation("ImportUploader", fields: [uploadedByUserId], references: [id], onDelete: Restrict)
  confirmedBy      User?       @relation("ImportConfirmer", fields: [confirmedByUserId], references: [id], onDelete: Restrict)
  rows             ImportRow[]

  @@index([status, createdAt])
  @@index([uploadedByUserId])
  @@index([confirmedByUserId])
}


model ImportRow {
  id                   String          @id @default(uuid())
  batchId              String
  sheetName            String
  rowNumber            Int
  rawData              Json
  normalizedData       Json?
  validationStatus     ImportRowStatus @default(NEEDS_REVIEW)
  validationMessages   Json            @default("[]")
  action               ImportRowAction @default(SKIP)
  propertyId           String?

  stayId               String?
  expectedStayRevision Int?
  beforeSnapshot       Json?
  afterSnapshot        Json?
  appliedAt            DateTime?       @db.Timestamptz(3)
  createdAt            DateTime        @default(now()) @db.Timestamptz(3)
  updatedAt            DateTime        @updatedAt @db.Timestamptz(3)

  batch        ImportBatch   @relation(fields: [batchId], references: [id], onDelete: Restrict)
  property     Property?     @relation(fields: [propertyId], references: [id], onDelete: Restrict)
  stay         Stay?         @relation(fields: [stayId, propertyId], references: [id, propertyId], onDelete: Restrict, onUpdate: Restrict)
  stayRevision StayRevision?

  @@unique([batchId, sheetName, rowNumber])
  @@index([batchId, action, validationStatus])
  @@index([propertyId])
  @@index([stayId, propertyId])
}


model ChecklistTemplate {
  id         String        @id @default(uuid())
  propertyId String
  type       ChecklistType
  title      String
  version    Int           @default(1)
  definition Json
  isActive   Boolean       @default(true)
  createdAt  DateTime      @default(now()) @db.Timestamptz(3)
  updatedAt  DateTime      @updatedAt @db.Timestamptz(3)

  property    Property              @relation(fields: [propertyId], references: [id], onDelete: Restrict)
  submissions ChecklistSubmission[]

  @@unique([propertyId, type])
  @@unique([id, propertyId])
}


model ChecklistSubmission {
  id                    String           @id @default(uuid())
  requestKey            String           @unique
  propertyId            String
  type                  ChecklistType
  templateId            String
  templateVersion       Int
  templateSnapshot      Json
  stayId                String?
  stayLinkVersion       Int?
  authorUserId          String?
  authorSnapshot        Json
  authorSource          ActorSource
  visitDate             DateTime         @db.Date
  status                SubmissionStatus @default(DRAFT)
  draftAnswers          Json?
  currentRevision       Int              @default(0)
  startedAt             DateTime?        @db.Timestamptz(3)
  submittedAt           DateTime?        @db.Timestamptz(3)
  cancelledAt           DateTime?        @db.Timestamptz(3)
  privateTokenHash      String?          @unique
  privateTokenExpiresAt DateTime?        @db.Timestamptz(3)
  createdAt             DateTime         @default(now()) @db.Timestamptz(3)
  updatedAt             DateTime         @updatedAt @db.Timestamptz(3)

  property    Property             @relation(fields: [propertyId], references: [id], onDelete: Restrict)
  template    ChecklistTemplate    @relation(fields: [templateId, propertyId], references: [id, propertyId], onDelete: Restrict, onUpdate: Restrict)
  stay        Stay?                @relation(fields: [stayId, propertyId], references: [id, propertyId], onDelete: Restrict, onUpdate: Restrict)
  author      User?                @relation(fields: [authorUserId], references: [id], onDelete: Restrict)
  revisions   SubmissionRevision[]
  attachments Attachment[]
  issues      Issue[]

  @@unique([id, propertyId])
  @@index([propertyId, type, status, visitDate])
  @@index([propertyId, type, startedAt])
  @@index([stayId, type, status])
  @@index([templateId, propertyId])
  @@index([authorUserId])
}


model SubmissionRevision {
  id            String                   @id @default(uuid())
  submissionId  String
  version       Int
  action        SubmissionRevisionAction
  status        SubmissionStatus
  snapshot      Json
  actorSource   ActorSource
  actorUserId   String?
  actorSnapshot Json
  reason        String?
  createdAt     DateTime                 @default(now()) @db.Timestamptz(3)

  submission    ChecklistSubmission            @relation(fields: [submissionId], references: [id], onDelete: Restrict)
  actor         User?                          @relation(fields: [actorUserId], references: [id], onDelete: Restrict)
  photos        SubmissionRevisionAttachment[]
  sourcedIssues Issue[]
  issueEvents   IssueEvent[]

  @@unique([submissionId, version])
  @@unique([id, submissionId])
  @@index([actorUserId])
}


model Attachment {
  id               String           @id @default(uuid())
  kind             AttachmentKind
  status           AttachmentStatus @default(PENDING)
  storageBucket    String
  storageKey       String           @unique
  originalFilename String
  contentType      String
  sizeBytes        Int
  checksumSha256   String?
  width            Int?
  height           Int?
  propertyId       String?
  submissionId     String?
  uploadedByUserId String?
  uploadTokenHash  String?          @unique
  uploadExpiresAt  DateTime?        @db.Timestamptz(3)
  readyAt          DateTime?        @db.Timestamptz(3)
  deletedAt        DateTime?        @db.Timestamptz(3)
  createdAt        DateTime         @default(now()) @db.Timestamptz(3)

  property         Property?                      @relation(fields: [propertyId], references: [id], onDelete: Restrict)
  submission       ChecklistSubmission?           @relation(fields: [submissionId, propertyId], references: [id, propertyId], onDelete: Restrict, onUpdate: Restrict)
  uploadedBy       User?                          @relation(fields: [uploadedByUserId], references: [id], onDelete: Restrict)
  importBatch      ImportBatch?
  submissionPhotos SubmissionRevisionAttachment[]
  issuePhotos      IssueEventAttachment[]

  @@unique([id, submissionId])
  @@index([submissionId, propertyId])
  @@index([propertyId, createdAt])
  @@index([status, uploadExpiresAt])
  @@index([uploadedByUserId])
}

model SubmissionRevisionAttachment {
  revisionId   String
  attachmentId String
  submissionId String
  purpose      PhotoPurpose
  sectionId    String?
  itemId       String?
  areaLabel    String?
  sortOrder    Int          @default(0)

  revision   SubmissionRevision @relation(fields: [revisionId, submissionId], references: [id, submissionId], onDelete: Restrict, onUpdate: Restrict)
  attachment Attachment         @relation(fields: [attachmentId, submissionId], references: [id, submissionId], onDelete: Restrict, onUpdate: Restrict)

  @@id([revisionId, attachmentId])
  @@index([attachmentId, submissionId])
  @@index([revisionId, submissionId])
}


model IssueCategory {
  id        String   @id @default(uuid())
  name      String   @unique
  sortOrder Int      @default(0)
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now()) @db.Timestamptz(3)
  updatedAt DateTime @updatedAt @db.Timestamptz(3)

  issues Issue[]

  @@index([isActive, sortOrder])
}


model Issue {
  id                  String      @id @default(uuid())
  requestKey          String      @unique
  propertyId          String
  categoryId          String
  title               String
  description         String?
  areaLabel           String?
  isUrgent            Boolean     @default(false)
  status              IssueStatus @default(NEW)
  sourceSubmissionId  String?
  sourceItemId        String?
  sourceRevisionId    String?
  recurrenceOfIssueId String?
  currentVersion      Int         @default(0)
  reportedAt          DateTime    @default(now()) @db.Timestamptz(3)
  resolvedAt          DateTime?   @db.Timestamptz(3)
  resolvedByUserId    String?
  cancelledAt         DateTime?   @db.Timestamptz(3)
  cancellationReason  String?
  updatedAt           DateTime    @updatedAt @db.Timestamptz(3)

  property         Property             @relation(fields: [propertyId], references: [id], onDelete: Restrict)
  category         IssueCategory        @relation(fields: [categoryId], references: [id], onDelete: Restrict)
  sourceSubmission ChecklistSubmission? @relation(fields: [sourceSubmissionId, propertyId], references: [id, propertyId], onDelete: Restrict, onUpdate: Restrict)
  sourceRevision   SubmissionRevision?  @relation(fields: [sourceRevisionId, sourceSubmissionId], references: [id, submissionId], onDelete: Restrict, onUpdate: Restrict)
  recurrenceOf     Issue?               @relation("IssueRecurrence", fields: [recurrenceOfIssueId, propertyId], references: [id, propertyId], onDelete: Restrict, onUpdate: NoAction)
  recurrences      Issue[]              @relation("IssueRecurrence")
  resolvedBy       User?                @relation("IssueResolver", fields: [resolvedByUserId], references: [id], onDelete: Restrict)
  events           IssueEvent[]

  @@unique([id, propertyId])
  @@unique([sourceSubmissionId, sourceItemId])
  @@index([propertyId, status, cancelledAt, reportedAt])
  @@index([propertyId, isUrgent, status])
  @@index([categoryId])
  @@index([sourceSubmissionId, propertyId])
  @@index([sourceRevisionId, sourceSubmissionId])
  @@index([recurrenceOfIssueId, propertyId])
  @@index([resolvedByUserId])
}


model IssueEvent {
  id               String         @id @default(uuid())
  issueId          String
  version          Int
  type             IssueEventType
  actorSource      ActorSource
  actorUserId      String?
  actorSnapshot    Json
  sourceRevisionId String?
  note             String?
  fromStatus       IssueStatus?
  toStatus         IssueStatus?
  snapshot         Json
  createdAt        DateTime       @default(now()) @db.Timestamptz(3)

  issue          Issue                  @relation(fields: [issueId], references: [id], onDelete: Restrict)
  actor          User?                  @relation(fields: [actorUserId], references: [id], onDelete: Restrict)
  sourceRevision SubmissionRevision?    @relation(fields: [sourceRevisionId], references: [id], onDelete: Restrict)
  photos         IssueEventAttachment[]

  @@unique([issueId, version])
  @@index([actorUserId])
  @@index([sourceRevisionId])
}


model IssueEventAttachment {
  eventId      String
  attachmentId String
  sortOrder    Int    @default(0)

  event      IssueEvent @relation(fields: [eventId], references: [id], onDelete: Restrict)
  attachment Attachment @relation(fields: [attachmentId], references: [id], onDelete: Restrict)

  @@id([eventId, attachmentId])
  @@index([attachmentId])
}
